--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,7 +1,7 @@
-title: Grav
+title: Grav Dino
 author:
-  name: Joe Bloggs
-  email: 'joe@test.com'
+  name: Sam Fortin
+  email: 'sam.j.fortin@gmail.com'
 metadata:
-    description: 'Grav is an easy to use, yet powerful, open source flat-file CMS'
+    description: 'Sam Test Grav'
 
